--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,12 @@
 		<div class="wrapper">
 			<div class="content">
 				<div class="content-left">
+<!--
 					<a class="banner" href="#">
 						<%= image_tag("banner.jpg") %>
 					</a>
+-->
+&nbsp;
 				</div>
 				<div class="content-right">					
 					<% flash.each do |key, value| %>
