--- a/app/views/saunas/_results.html.erb
+++ b/app/views/saunas/_results.html.erb
@@ -1,8 +1,8 @@
 <ul class="result-list" id="saunaResultList">
 	<li class="head">
 		<div class="name"><%= t :sauna %></div>
-		<div class="capacity"><%= t :capacity %></div>
-		<div class="price"><%= t :price %></div>
-	</li>
+		<div class="capacity"><%= t :capacity %><%#-= t :v_chel %></div>
+		<div class="price"><%= t :price %><%#-= t :v_rub %></div>
+	</li>		
 	<%= render @saunas %>		
 </ul>
