--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -2,6 +2,7 @@
 	<%= render 'shared/globalsearch' %>	
 	<%= render 'shared/mobile' %>	
 	<%= render 'searchform' %>	
+	<%= render 'results' %>	
 </div>
 <script type="text/javascript">
 	Frame.initMainPage();
