--- a/app/views/layouts/application.touch.erb
+++ b/app/views/layouts/application.touch.erb
@@ -3,10 +3,16 @@
 	<head> 
 		<title><%= t :title %></title> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 	
+		<!-- we should use latest version for "step" attribute in slider until jQuery team creates stable version which supports it -->
+		<link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
+		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+		<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
+<!--
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />		
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-		
+-->
+	
 		<%= javascript_include_tag :defaults %>
 		<%= csrf_meta_tag %>
 	</head> 
