--- a/app/views/saunas/_baseinfo.html.erb
+++ b/app/views/saunas/_baseinfo.html.erb
@@ -15,16 +15,18 @@
 	
 	<div class="contacts">
 		<%= t :phone_number %>:
-		<%  if @sauna.phone_number1 != nil %>
+		<%  if @sauna.phone_number1 != nil && @sauna.phone_number1 != "" %>
 			<%=  @sauna.phone_number1 %><br />
 		<% end %>	
-		<%  if @sauna.phone_number2 != nil %>
+		<%  if @sauna.phone_number2 != nil && @sauna.phone_number2 != "" %>
 			<%=  @sauna.phone_number2 %><br />
 		<% end %>	
-		<%  if @sauna.phone_number3 != nil %>
+		<%  if @sauna.phone_number3 != nil && @sauna.phone_number3 != "" %>
 			<%=  @sauna.phone_number3 %><br />
 		<% end %>			
 		<%= t :address %>: <%= @sauna.address.full_description %><br />
-		<%= t :email %>: <%= @sauna.email %>
+		<% if @sauna.email != nil && @sauna.email != "" %>
+			<%= t :email %>: <%= @sauna.email %>
+		<% end %>
 	</div>
 </div>
