--- a/app/views/saunas/index.js.erb
+++ b/app/views/saunas/index.js.erb
@@ -1,3 +1,1 @@
-$('.row').remove();
-$('<%= render @saunas %>').appendTo($('.result-list'));
-Frame.initSaunaSorting();
+$('.row').remove();$('<%= render @saunas %>').appendTo($('.result-list'));Frame.initSaunaSorting();
