--- a/app/views/saunas/index.js.erb
+++ b/app/views/saunas/index.js.erb
@@ -1,1 +1,3 @@
-$('.row').remove();$('<%= render @saunas %>').appendTo($('.result-list'));Frame.initSaunaSorting();
+$('.row').remove();
+$('<%= render @saunas %>').appendTo($('.result-list'));
+Frame.initSaunaSorting();
