improve search by name

--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -5,5 +5,8 @@
 	<%= render 'saunas/results' %>	
 	<%= will_paginate @saunas %>
 </div>
+<script type="text/javascript">
+	Frame.initSearchByName();
+</script>
 	
 	
