--- a/app/views/shared/_globalsearch.html.erb
+++ b/app/views/shared/_globalsearch.html.erb
@@ -1,6 +1,6 @@
 <div class="round-box search-box">
 	<%= search_form_for @q, :remote => true, :html => {:method => :get, :class => "round-box search-box"} do |f| %>
-		<%= f.text_field :name_cont  %>		
+		<%= f.text_field :name_cont, :title => "Поиск по названию" %>		
 		<%= f.submit " ", :class => "search-button" %>	
 	<% end %>
 </div>
