additional options for search

--- a/app/views/saunas/_searchform.html.erb
+++ b/app/views/saunas/_searchform.html.erb
@@ -38,6 +38,9 @@
 						<label>
 							<%= f.check_box :sauna_items_has_bar_eq %><%= t :has_bar %> 
 						</label>
+						<label>
+							<%= f.check_box :sauna_items_has_pool_eq %><%= t :has_pool %> 
+						</label>						
 					</li>
 					<li>
 						<label>
@@ -45,6 +48,9 @@
 						</label>
 						<label>
 							<%= f.check_box :sauna_items_has_billiards_eq %><%= t :has_billiards %> 
+						</label>
+						<label>
+							<%= f.check_box :sauna_items_has_mangal_eq %><%= t :has_mangal %> 
 						</label>
 					</li>
 					<li>
@@ -54,6 +60,9 @@
 						<label>
 							<%= f.check_box :sauna_items_has_video_eq %><%= t :has_video %>  
 						</label>
+						<label>
+							<%= f.check_box :sauna_items_has_veniki_eq %><%= t :has_veniki %> 
+						</label>						
 					</li>
 				</ul>
 				<div class="clearing"></div>
