--- a/app/views/saunas/index.mobile.erb
+++ b/app/views/saunas/index.mobile.erb
@@ -1,3 +1,4 @@
+<a href="/all">Все сауны</a>
 <%= search_form_for @q do |f| %>
 	<table class="search-form">
 		<th colspan="2" align="center"><%= t :search_form %></th>
@@ -81,4 +82,3 @@
 		</tr>			
 	</table>			
 <% end %>
-	
