--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,8 @@
 <div class="main-page">	
-	<%= render 'shared/globalsearch' %>	
+	<%#-= render 'shared/globalsearch' %>	
 	<%= render 'shared/mobile' %>	
+	<br/><br/><br/><br/>
+
 	<div class="round-box filter-box">
 		<ul>
 			<li class="black _closeOnReady _expandedBox filter-section closed">
