--- a/app/views/saunas/search.mobile.erb
+++ b/app/views/saunas/search.mobile.erb
@@ -1,10 +1,18 @@
 <table class="search-form">
 	<th align="center"><%= t :search_results %></th>
-	<% @saunas.each do |sauna| %>
-	<tr>
-		<td align="left"  class="<%= cycle('even', 'odd') -%>">
-			<%= link_to sauna.name, sauna %>,  <%=  t :short_phone_number %>:<%= sauna.phone_number1 %>    			
-		</td>
-	</tr>
-	<% end %>
+	<%  if !@saunas.empty? %>
+		<% @saunas.each do |sauna| %>
+		<tr>
+			<td align="left"  class="<%= cycle('even', 'odd') -%>">
+				<%= link_to sauna.name, sauna %>,  <%=  t :short_phone_number %>:<%= sauna.phone_number1 %>    			
+			</td>
+		</tr>
+		<% end %>	
+	<% else %>
+		<tr>
+			<td align="center">
+				<%= t :no_results %>		
+			</td>
+		</tr>
+	<% end %>	
 </table>	
