--- a/app/views/saunas/search.touch.erb
+++ b/app/views/saunas/search.touch.erb
@@ -1,14 +1,19 @@
 <div data-role="header">
 	<h1></h1>	
+	<%= link_to t(:home), "/", "data-icon" => "back", "class" => "ui-btn-left", "data-ajax" => "false" %>
 	<%= link_to t(:full_version), "/?mobile=0", "data-icon" => "gear", "class" => "ui-btn-right", "data-ajax" => "false" %>
 </div>
 
-<div data-role="content">
-  <ul data-role="listview">
-    <% @saunas.each do |sauna| %>
-    <li>
-      <%= link_to sauna.name, sauna %>      
-    </li>
-    <% end %>
-  </ul>
+<div data-role="content">	
+	<%  if !@saunas.empty? %>
+		<ul data-role="listview">
+			<% @saunas.each do |sauna| %>
+				<li>
+					<%= link_to sauna.name, sauna %>      
+				</li>
+			<% end %>
+		</ul>	
+	<% else %>
+		<%= t :no_results %>
+	<% end %>	
 </div>
