--- a/app/views/saunas/search.mobile.erb
+++ b/app/views/saunas/search.mobile.erb
@@ -4,7 +4,7 @@
 		<% @saunas.each do |sauna| %>
 		<tr>
 			<td align="left"  class="<%= cycle('even', 'odd') -%>">
-				<%= link_to sauna.name, sauna %>,  <%=  t :short_phone_number %>:<%= sauna.phone_number1 %>    			
+				<%= link_to sauna.name, sauna %>,  <%=  t :short_phone_number %>:<a href="tel:<%= sauna.phone_number1 %>"><%= sauna.phone_number1 %></a>
 			</td>
 		</tr>
 		<% end %>	
