paging for admin saunas

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,17 +7,16 @@
 	
 	<div>		
 		<h1><%= t :saunas_list %></h1>
-		<% unless @user.saunas.empty? %>
+		<% unless @saunas.empty? %>
 			<ul class="result-list">	
 				<li class="head">
 					<div class="name"><%= t :sauna %></div>
 					<div><%= t :actions %></div>
-				</li>
-				<%  @user.saunas.each do |sauna| %>				
-					<%= render sauna %>
-				<% end %>		
+				</li>		
+				<%= render @saunas %>
 			</ul>
 		<% end %>	
+		<%= will_paginate @saunas %>
 	</div>
 	
 </div>
