--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -3,5 +3,6 @@
     <![endif]-->
 	<%= stylesheet_link_tag 'main',  :media => 'screen' %>
 	<%= stylesheet_link_tag 'galleriffic',  :media => 'screen' %>
+	<%= stylesheet_link_tag 'paging',  :media => 'screen' %>
 	
 				
