--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -1,12 +1,16 @@
 <div class="main-page">
 	<%= render 'shared/globalsearch' %>	
 	<%= render 'shared/mobile' %>	
-	
 	<%= render 'saunas/results' %>	
-	<%= will_paginate @saunas %>
+	
+	<div class="digg_pagination">
+		<%= will_paginate @saunas, :container => false %>
+	</div>
+	
 </div>
 <script type="text/javascript">
 	Frame.initSearchByName();
+	Frame.initSaunaSorting();
 </script>
 	
 	
