--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -5,7 +5,9 @@
     <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   		
 	<%= javascript_include_tag "jquery.galleriffic" %>   	
 	<%= javascript_include_tag "jquery.opacityrollover" %>   	
-	<%= javascript_include_tag "script" %>     
+	<%= javascript_include_tag "script" %>  
+
+	<script type="text/javascript" src="http://userapi.com/js/api/openapi.js?47"></script>	
 	
 
 		
