google analytics code

--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -7,7 +7,25 @@
 	<%= javascript_include_tag "jquery.opacityrollover" %>   	
 	<%= javascript_include_tag "script" %>  
 
+	<!-- Vkontakte API -->
 	<script type="text/javascript" src="http://userapi.com/js/api/openapi.js?47"></script>	
+	<!-- /Vkontakte API -->
 	
+	
+	<!-- Google Analytics -->
+	<script type="text/javascript">
+
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-28780167-1']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+
+	</script>	
+	<!-- /Google Analytics -->
 
 		
