--- a/app/views/admin/saunas/new.html.erb
+++ b/app/views/admin/saunas/new.html.erb
@@ -14,3 +14,6 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	$('#sauna_address_district_id').chainedTo('#sauna_address_city_id');		
+</script>
