--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -4,7 +4,8 @@
     <%= javascript_include_tag "jquery-1.6.2.min" %>
     <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   		
 	<%= javascript_include_tag "jquery.galleriffic" %>   	
-	<%= javascript_include_tag "jquery.opacityrollover" %>   	
+	<%= javascript_include_tag "jquery.opacityrollover" %>   
+	<%= javascript_include_tag "jquery.chained.mini" %>   	
 	<%= javascript_include_tag "script" %>  
 
 	<!-- Vkontakte API -->
