--- a/app/views/saunas/_searchform.html.erb
+++ b/app/views/saunas/_searchform.html.erb
@@ -75,7 +75,7 @@
 				<dl>
 					<dt class="township"><%= t :district %></dt>
 					<dd class="township">
-						<%= f.collection_select :address_district_id_eq, District.order("id DESC"), :id, :name, :include_blank => false %>											
+						<%= f.collection_select :address_district_id_eq, District.where("city_id = 1").order("id DESC"), :id, :name, :include_blank => false %>											
 					</dd>
 				</dl>
 			</div>
