--- a/app/views/saunas/index.mobile.erb
+++ b/app/views/saunas/index.mobile.erb
@@ -23,7 +23,7 @@
 				<%= t :address_district_id_eq %>
 			</td>
 			<td>
-				<%= f.collection_select :address_district_id_eq, District.order("id DESC"), :id, :name, :include_blank => false %>
+				<%= f.collection_select :address_district_id_eq, District.where("city_id = 1").order("id DESC"), :id, :name, :include_blank => false %>
 			</td>				
 		</tr>
 		<tr>				
