--- a/app/views/saunas/_searchform.html.erb
+++ b/app/views/saunas/_searchform.html.erb
@@ -73,9 +73,15 @@
 			<h2><%= t :place_parameters %></h2>
 			<div class="place_param _expanded">
 				<dl>
-					<dt class="township"><%= t :district %></dt>
+					<dt class="township"><%= t :city_colon %></dt>
 					<dd class="township">
-						<%= f.collection_select :address_district_id_eq, District.where("city_id = 1").order("id DESC"), :id, :name, :include_blank => false %>											
+						<%= select("q", "address_city_id_eq", options_for_select(@cities_for_dropdown), { :include_blank => false }) %>						
+					</dd>
+				</dl>			
+				<dl>
+					<dt class="township"><%= t :district_colon %></dt>
+					<dd class="township">
+						<%= select("q", "address_district_id_eq", options_for_select(@districts_for_dropdown), { :include_blank => false }) %>												
 					</dd>
 				</dl>
 			</div>
