--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -7,5 +7,6 @@
 <script type="text/javascript">
 	Frame.initMainPage();
 	$('#sauna_search .search-button').click();
+	$('#q_address_district_id_eq').chainedTo('#q_address_city_id_eq');		
 </script>			
 	
