--- a/app/views/admin/saunas/index.html.erb
+++ b/app/views/admin/saunas/index.html.erb
@@ -1,12 +1,14 @@
 <div class="main-page">
-	<% if current_user.super_admin? %>   
-		<%= render 'shared/navigation', :left_link => admin_users_path, :left_label => t(:users_list), :right_label => @user.name %>		
-	<% end %>
+	<%= render 'shared/globalsearch' %>	
 	
-	<%= link_to t(:add), new_admin_sauna_path(:user_id => @user.id) %>   
+	<div class="mobile-ver">		
+		<%= link_to t(:add_new_sauna), new_admin_sauna_path(:user_id => @user.id) %>   
+	</div>
 	
-	<div>		
-		<h1><%= t :saunas_list %></h1>
+	<br/>
+	
+	<div class="admin-content">		
+		<h1><%= t :saunas_list_of_user %><%= @user.name %></h1>
 		<% unless @saunas.empty? %>
 			<ul class="result-list">	
 				<li class="head">
@@ -18,6 +20,9 @@
 				<% end %>		
 			</ul>
 		<% end %>	
+		<div class="digg_pagination">
+			<%= will_paginate @saunas, :container => false %>
+		</div>			
 	</div>
 	
 	
