--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -6,6 +6,8 @@
 		<%= javascript_include_tag :defaults %>
 		<%= stylesheet_link_tag 'mobile',  :media => 'screen' %>
 		<%= csrf_meta_tag %>
+		
+		<title>Сауны в Ижевске</title>
 	</head> 
 <body> 
 	<table class="header">
