--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,21 +8,40 @@
 			<li class="black _closeOnReady _expandedBox filter-section closed">
 				<h1>Бани и сауны в Ижевске</h1>
 				<div class="extra_params _expanded">
-					<p>Проект "Бани и сауны в Ижевске" - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска. 
-					Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
-					фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Чтобы вам было удобнее, 
-					мы сделали мобильную версию, которая ползволяет искать бани и сауны в Ижевске с вашего телефона.
-					</p>
-
-					<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
-					поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
-					новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
-					</p>
-
-					<p>
-					Вам непонятно, как пользоваться поиском, у вас есть какие-то пожелания или вы хотите связаться с администраторами сайта, чтобы 
-					добавить сауну или разместить рекламу? Нажмите <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>, мы с удовольствием вас выслушаем!
-					</p>	
+					<div class="about">
+						<p>Портал "Бани и сауны в Ижевске" - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска. 
+						Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
+						фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Чтобы вам было удобнее, 
+						мы сделали две мобильные версии, которые ползволяют искать бани и сауны в любом месте.
+						</p>
+						<p>Версия <a href="/m">для обычных телефонов</a> проста и минималистична, она не содержит картинок и скриптов и подойдет даже 
+						для мобильных телефонов с разрешением экрана всего 128х160.	Однако вы по-прежнему можете осуществлять поиск и получать самую важную информацию о саунах - описание, цена и адрес.
+						Минимум трафика - максимум информации!
+						</p>						
+						<p>Версия <a hred="/pda">для смартфонов</a> сделана специально для устройств с сенсорным экраном, будь то смартфон или планшет. 
+						Она имеет элементы управления, хорошо знакомые владельцам iPhone или iPad - прокручивающиеся списки, слайдеры, раскрывающиеся панели и т.д. Её 
+						интерфейс удобен и интуитивно понятен. Специально для неё мы сжимаем фотографии, чтобы экономить интернет-трафик, т.о. 
+						использование этой версии не сильно отразиться на вашем балансе.
+						</p>					
+						
+						<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
+						поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
+						новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
+						</p>
+						
+						<p>
+						Мы также планируем расширить географию нашего каталога и охватить все города Удмуртской Республики. Мы будем очень признательны за любую 
+						информацию о саунах и банях вашего города. У нас есть идеи, как улучшить наш сервис поиска саун, и мы постоянно его совершенствуем. Надеемся, что 
+						уже очень скоро мы сделаем он-лайн бронирование бань Ижевска.
+						</p>
+						
+						<p>
+						Нам очень важно знать ваше мнение о таких вещах, как удобство сайта в использовании, достоверность и полнота информации, 
+						замечания по улучшению работы сервиса.
+						Вы можете оставить свои замечания <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>, мы
+						обязательно их рассмотрим! 			
+						</p>	
+					</div>
 					<div class="clearing"></div>
 				</div>	
 			</li>		
