--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -719,3 +719,44 @@ code { padding: .2em .5em; }
 .admin-content {
 	padding-top: 85px;
 }	
+.welcome {
+	clear: both;
+	margin: 10px 0px 0px 0px;
+	padding: 0px 10px 10px 20px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius: 10px;
+	border-radius: 10px;
+	border: 1px solid;
+	background: #ffffff;
+}	
+
+.welcome-content{	
+	margin: 0px 20px 0px 0px;
+}	
+
+.welcome-content p{	
+	text-indent: 30px;	
+	line-height: 18px;
+	text-align: justify;
+	padding: 0px 0px 5px 0px;
+}	
+
+.close-button {
+    font-family: Tahoma,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 700;
+    font-style: normal;
+    color: #888;
+	cursor: pointer;
+	text-align: right;
+	//border: 1px solid;
+}
+
+.about p{	
+	text-indent: 30px;	
+	padding: 0px 0px 5px 0px;
+}	
+
+
