--- a/app/views/layouts/application.touch.erb
+++ b/app/views/layouts/application.touch.erb
@@ -15,6 +15,8 @@
 		
 		<%= javascript_include_tag :defaults %>
 		<%= csrf_meta_tag %>
+		
+		<title>Сауны в Ижевске</title>
 	</head> 
 <body> 
 	<div data-role="page">
