--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,14 @@
-<div class="round-box search-box">
-	<form action="">
-		<input type="text" name="searchText" value="" placeholder="поиск по сайту" />
-		<input type="submit" class="search-button" value="" />
-	</form>
-</div>
-<div class="helper">
-	<div class="helper-right">
-		<div class="helper-left">
-			Нужна помощь? Нажмите <a href="#">здесь</a>, мы поможем!
-		</div>
+<div class="welcome">	
+	<div class="close-button">x</div>					
+	<div class="welcome-content">
+	<p>Наш портал - это место, где Вы быстро и легко найдете всю информацию о саунах и банях в Ижевске. Задайте параметры, которые наиболее важны для вас при выборе сауны - цена за час, вместимость, 
+	набор доп. услуг или местоположение, и 
+	наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге. 
+	Вы можете узнать цены и адрес, посмотреть фото, прочитать отзывы других посетителей и оставить свой.</p>
+	<p>
+	Но и это ещё не всё. Вы отдыхаете компанией и вдруг появляется идея поехать в сауну, а под рукой нет ни справочников, ни компьютера. Знакомая ситуация? Нам она знакома,
+	именно поэтому мы создали мобильные версии сайта - <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
+	Ищете сауну в любое время и в любом месте!
+	</p>
 	</div>
-</div>
+</div>	
