--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,20 +35,7 @@
 				</div>
 				<div class="content-right">												
 					<% if !second_time? %>
-						<div class="welcome">	
-							<div class="close-button">x</div>					
-							<div class="welcome-content">
-							<p>Наш портал - это место, где Вы быстро и легко найдете всю информацию о саунах и банях в Ижевске. Задайте параметры, которые наиболее важны для вас при выборе сауны - цена за час, вместимость, 
-							набор доп. услуг или местоположение, и 
-							наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге. 
-							Вы можете узнать цены и адрес, посмотреть фото, прочитать отзывы других посетителей и оставить свой.</p>
-							<p>
-							Но и это ещё не всё. Вы отдыхаете компанией и вдруг появляется идея поехать в сауну, а под рукой нет ни справочников, ни компьютера. Знакомая ситуация? Нам она знакома,
-							именно поэтому мы создали мобильные версии сайта - <a href="/m">для обычных телефонов</a> и для <a hred="/pda">для смартфонов</a>. 
-							Ищете сауну в любое время и в любом месте!
-							</p>
-							</div>
-						</div>						
+						<%= render 'layouts/header' %>					
 					<% end %>	
 					
 					<% flash.each do |key, value| %>
