create\edit user confirmation mail

--- a/app/views/notifier/welcome_email.text.erb
+++ b/app/views/notifier/welcome_email.text.erb
@@ -2,7 +2,9 @@
 =====================================================
 
 Вы успешно зарегистрировались в нашей системе, 
-ваш логин: <%= @user.name %>,
-ваш пароль: <%= @user.password %>,
+ваш логин: <%= @user.name %>
+ваш пароль: <%= @user.password %>
  
 Для входа на сайт перейдите по ссылке: http://go-to-sauna/signin
+
+C уважением, Администратор.
