--- a/app/views/notifier/update_user_email.html.erb
+++ b/app/views/notifier/update_user_email.html.erb
@@ -3,16 +3,15 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
-  <body>
-    <h1>Добро пожаловать на go-to-sauna.ru, <%= @user.name %></h1>
+  <body>   
     <p>
-		Вы успешно зарегистрировались в нашей системе,<br/> 
-		ваш логин: <%= @user.name %><br/>
-		ваш пароль: <%= @user.password %><br/>
+		Данные о Вас в нашей системе были успешно изменены. Ваши новые данные:<br/>
+		логин: <%= @user.name %><br/>
+		пароль: <%= @user.password %><br/>
     </p>
     <p>
       Для входа на сайт перейдите по ссылке: http://go-to-sauna/signin
-    </p>    
+    </p> 
     <p>
       C уважением, Администратор.
     </p> 	
