--- a/app/views/notifier/update_user_email.html.erb
+++ b/app/views/notifier/update_user_email.html.erb
@@ -6,7 +6,7 @@
   <body>   
     <p>
 		Данные о Вас в нашей системе были успешно изменены. Ваши новые данные:<br/>
-		логин: <%= @user.name %><br/>
+		логин: <%= @user.email %><br/>
 		пароль: <%= @user.password %><br/>
     </p>
     <p>
