--- a/app/views/notifier/update_user_email.text.erb
+++ b/app/views/notifier/update_user_email.text.erb
@@ -1,5 +1,5 @@
 Данные о Вас в нашей системе были успешно изменены. Ваши новые данные:
-логин: <%= @user.name %>
+логин: <%= @user.email %>
 пароль: <%= @user.password %>
  
 Для входа на сайт перейдите по ссылке: http://go-to-sauna/signin
