--- a/app/views/notifier/welcome_email.html.erb
+++ b/app/views/notifier/welcome_email.html.erb
@@ -4,10 +4,10 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Добро пожаловать на go-to-sauna.ru, <%= @user.name %></h1>
+    <h1>Добро пожаловать на go-to-sauna.ru, пользователь <%= @user.name %></h1>
     <p>
 		Вы успешно зарегистрировались в нашей системе,<br/> 
-		ваш логин: <%= @user.name %><br/>
+		ваш логин: <%= @user.email %><br/>
 		ваш пароль: <%= @user.password %><br/>
     </p>
     <p>
