--- a/app/views/notifier/welcome_email.text.erb
+++ b/app/views/notifier/welcome_email.text.erb
@@ -1,8 +1,8 @@
-Добро пожаловать на go-to-sauna.ru, <%= @user.name %>
+Добро пожаловать на go-to-sauna.ru, пользователь <%= @user.name %>
 =====================================================
 
 Вы успешно зарегистрировались в нашей системе, 
-ваш логин: <%= @user.name %>
+ваш логин: <%= @user.email %>
 ваш пароль: <%= @user.password %>
  
 Для входа на сайт перейдите по ссылке: http://go-to-sauna/signin
